[gd_scene load_steps=25 format=2]

[ext_resource path="res://Resources/Sprites/card_back.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/Scripts/Game.gd" type="Script" id=2]
[ext_resource path="res://Assets/Scripts/Phases.gd" type="Script" id=3]
[ext_resource path="res://Assets/Scripts/deck_load.gd" type="Script" id=4]
[ext_resource path="res://Resources/Sprites/s-l1600.jpg" type="Texture" id=6]
[ext_resource path="res://Assets/Scripts/CardFactory.gd" type="Script" id=7]
[ext_resource path="res://Assets/Scripts/Handlers/Action Center.gd" type="Script" id=8]
[ext_resource path="res://Assets/Scripts/Game View/Card Viewer.gd" type="Script" id=9]
[ext_resource path="res://Assets/Scripts/Main.gd" type="Script" id=10]
[ext_resource path="res://Assets/Main/Screens/ReadyScreen.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/Main/Screens/MainMenu.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/Main/Screens/ConnectionScreen.tscn" type="PackedScene" id=13]
[ext_resource path="res://Assets/Main/Screens/MatchScreen.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/fonts/monogram.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://Assets/Main/UILayer.gd" type="Script" id=16]
[ext_resource path="res://Assets/fonts/monogram.tres" type="DynamicFont" id=17]
[ext_resource path="res://Assets/Scripts/Player.gd" type="Script" id=18]
[ext_resource path="res://Assets/Main/Screens/Deck Importer.tscn" type="PackedScene" id=19]
[ext_resource path="res://Assets/Scenes/Zone.tscn" type="PackedScene" id=20]

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 15 )

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 15 )

[node name="Main" type="Node2D"]
script = ExtResource( 10 )

[node name="Game" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Players" type="Node" parent="Game"]
script = ExtResource( 18 )

[node name="Background" type="CanvasLayer" parent="Game"]

[node name="Board" type="TextureRect" parent="Game/Background"]
visible = false
margin_right = 1926.0
margin_bottom = 1086.0
rect_rotation = 0.0843596
rect_scale = Vector2( 0.9969, 0.994659 )
mouse_filter = 2
texture = ExtResource( 6 )
expand = true
stretch_mode = 1

[node name="Phase Manager" type="Node" parent="Game"]
script = ExtResource( 3 )

[node name="Game UI" type="CanvasLayer" parent="Game/Phase Manager"]
layer = 2

[node name="UI Elements" type="Control" parent="Game/Phase Manager/Game UI"]
visible = false
margin_right = 1919.0
margin_bottom = 1083.0

[node name="End Turn" type="Button" parent="Game/Phase Manager/Game UI/UI Elements"]
margin_left = 1656.0
margin_top = 520.0
margin_right = 1723.0
margin_bottom = 540.0
rect_scale = Vector2( 2.53929, 2.25831 )
text = "End Turn"

[node name="Memory Container" type="Panel" parent="Game/Phase Manager/Game UI/UI Elements"]
margin_left = 920.0
margin_top = 512.0
margin_right = 999.0
margin_bottom = 568.0

[node name="Memory" type="Label" parent="Game/Phase Manager/Game UI/UI Elements/Memory Container"]
margin_left = 10.0
margin_top = 6.0
margin_right = 74.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1

[node name="Phase Container" type="Panel" parent="Game/Phase Manager/Game UI/UI Elements"]
margin_left = 48.0
margin_top = 520.0
margin_right = 272.0
margin_bottom = 577.0

[node name="Current Phase" type="Label" parent="Game/Phase Manager/Game UI/UI Elements/Phase Container"]
margin_top = 8.0
margin_right = 216.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 3 )
text = " Phase"
align = 1

[node name="Turn Display" type="Panel" parent="Game/Phase Manager/Game UI/UI Elements"]
margin_left = 1656.0
margin_top = 456.0
margin_right = 1824.0
margin_bottom = 513.0

[node name="Turn Number" type="Label" parent="Game/Phase Manager/Game UI/UI Elements/Turn Display"]
margin_top = 8.0
margin_right = 160.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 3 )
text = "Turn 1"
align = 1

[node name="Action Query" type="PopupPanel" parent="Game/Phase Manager/Game UI/UI Elements"]
margin_left = 705.0
margin_top = 580.0
margin_right = 1216.0
margin_bottom = 802.0

[node name="Panel" type="Panel" parent="Game/Phase Manager/Game UI/UI Elements/Action Query"]
material = SubResource( 4 )
margin_left = 4.0
margin_top = 4.0
margin_right = 507.0
margin_bottom = 218.0

[node name="RichTextLabel" type="RichTextLabel" parent="Game/Phase Manager/Game UI/UI Elements/Action Query/Panel"]
margin_left = 27.0
margin_top = 16.0
margin_right = 474.0
margin_bottom = 176.0
custom_fonts/normal_font = SubResource( 5 )
text = "asdg"

[node name="Card Handler" type="Node" parent="Game"]
script = ExtResource( 8 )

[node name="Zones" type="CanvasLayer" parent="Game/Card Handler"]
layer = 3

[node name="Deck Loader" type="TextureRect" parent="Game/Card Handler/Zones"]
visible = false
script = ExtResource( 4 )

[node name="CardReader" type="Node" parent="Game/Card Handler/Zones/Deck Loader"]
script = ExtResource( 7 )

[node name="Card View" type="Node2D" parent="Game/Card Handler/Zones"]
visible = false
position = Vector2( 70, 202 )
scale = Vector2( 0.4, 0.4 )
script = ExtResource( 9 )

[node name="Player1" type="Control" parent="Game/Card Handler/Zones/Card View"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Baby Deck" parent="Game/Card Handler/Zones/Card View/Player1" instance=ExtResource( 20 )]
margin_left = 5.00011
margin_top = 1695.0
margin_right = 291.0
margin_bottom = 2105.0
texture = ExtResource( 1 )

[node name="Security" parent="Game/Card Handler/Zones/Card View/Player1" instance=ExtResource( 20 )]
margin_left = 5.0
margin_top = 1195.0
margin_right = 291.0
margin_bottom = 1605.0
texture = ExtResource( 1 )

[node name="Breeding Area" parent="Game/Card Handler/Zones/Card View/Player1" instance=ExtResource( 20 )]
margin_left = 365.0
margin_top = 1695.0
margin_right = 651.0
margin_bottom = 2105.0

[node name="Deck" parent="Game/Card Handler/Zones/Card View/Player1" instance=ExtResource( 20 )]
margin_left = 4185.0
margin_top = 1235.0
margin_right = 4471.0
margin_bottom = 1645.0
texture = ExtResource( 1 )

[node name="Trash" parent="Game/Card Handler/Zones/Card View/Player1" instance=ExtResource( 20 )]
margin_left = 4185.0
margin_top = 1715.0
margin_right = 4471.0
margin_bottom = 2125.0
texture = ExtResource( 1 )

[node name="BattleArea1" type="Control" parent="Game/Card Handler/Zones/Card View/Player1"]
margin_right = 40.0
margin_bottom = 40.0

[node name="slot_1" parent="Game/Card Handler/Zones/Card View/Player1/BattleArea1" instance=ExtResource( 20 )]
margin_left = 805.0
margin_top = 915.0
margin_right = 1091.0
margin_bottom = 1325.0

[node name="slot_2" parent="Game/Card Handler/Zones/Card View/Player1/BattleArea1" instance=ExtResource( 20 )]
margin_left = 1125.0
margin_top = 915.0
margin_right = 1411.0
margin_bottom = 1325.0

[node name="slot_3" parent="Game/Card Handler/Zones/Card View/Player1/BattleArea1" instance=ExtResource( 20 )]
margin_left = 1445.0
margin_top = 915.0
margin_right = 1731.0
margin_bottom = 1325.0

[node name="slot_4" parent="Game/Card Handler/Zones/Card View/Player1/BattleArea1" instance=ExtResource( 20 )]
margin_left = 1765.0
margin_top = 915.0
margin_right = 2051.0
margin_bottom = 1325.0

[node name="slot_5" parent="Game/Card Handler/Zones/Card View/Player1/BattleArea1" instance=ExtResource( 20 )]
margin_left = 2085.0
margin_top = 915.0
margin_right = 2371.0
margin_bottom = 1325.0

[node name="slot_6" parent="Game/Card Handler/Zones/Card View/Player1/BattleArea1" instance=ExtResource( 20 )]
margin_left = 2405.0
margin_top = 915.0
margin_right = 2691.0
margin_bottom = 1325.0

[node name="slot_7" parent="Game/Card Handler/Zones/Card View/Player1/BattleArea1" instance=ExtResource( 20 )]
margin_left = 2725.0
margin_top = 915.0
margin_right = 3011.0
margin_bottom = 1325.0

[node name="slot_8" parent="Game/Card Handler/Zones/Card View/Player1/BattleArea1" instance=ExtResource( 20 )]
margin_left = 3045.0
margin_top = 915.0
margin_right = 3331.0
margin_bottom = 1325.0

[node name="slot_9" parent="Game/Card Handler/Zones/Card View/Player1/BattleArea1" instance=ExtResource( 20 )]
margin_left = 3365.0
margin_top = 915.0
margin_right = 3651.0
margin_bottom = 1325.0

[node name="slot_10" parent="Game/Card Handler/Zones/Card View/Player1/BattleArea1" instance=ExtResource( 20 )]
margin_left = 3685.0
margin_top = 915.0
margin_right = 3971.0
margin_bottom = 1325.0

[node name="TamerArea1" type="Control" parent="Game/Card Handler/Zones/Card View/Player1"]
margin_right = 40.0
margin_bottom = 40.0

[node name="tamer_1" parent="Game/Card Handler/Zones/Card View/Player1/TamerArea1" instance=ExtResource( 20 )]
margin_left = 805.0
margin_top = 1395.0
margin_right = 1091.0
margin_bottom = 1805.0

[node name="tamer_2" parent="Game/Card Handler/Zones/Card View/Player1/TamerArea1" instance=ExtResource( 20 )]
margin_left = 1125.0
margin_top = 1395.0
margin_right = 1411.0
margin_bottom = 1805.0

[node name="tamer_3" parent="Game/Card Handler/Zones/Card View/Player1/TamerArea1" instance=ExtResource( 20 )]
margin_left = 1445.0
margin_top = 1395.0
margin_right = 1731.0
margin_bottom = 1805.0

[node name="tamer_4" parent="Game/Card Handler/Zones/Card View/Player1/TamerArea1" instance=ExtResource( 20 )]
margin_left = 1765.0
margin_top = 1395.0
margin_right = 2051.0
margin_bottom = 1805.0

[node name="tamer_5" parent="Game/Card Handler/Zones/Card View/Player1/TamerArea1" instance=ExtResource( 20 )]
margin_left = 2085.0
margin_top = 1395.0
margin_right = 2371.0
margin_bottom = 1805.0

[node name="tamer_6" parent="Game/Card Handler/Zones/Card View/Player1/TamerArea1" instance=ExtResource( 20 )]
margin_left = 2405.0
margin_top = 1395.0
margin_right = 2691.0
margin_bottom = 1805.0

[node name="tamer_7" parent="Game/Card Handler/Zones/Card View/Player1/TamerArea1" instance=ExtResource( 20 )]
margin_left = 2725.0
margin_top = 1395.0
margin_right = 3011.0
margin_bottom = 1805.0

[node name="tamer_8" parent="Game/Card Handler/Zones/Card View/Player1/TamerArea1" instance=ExtResource( 20 )]
margin_left = 3045.0
margin_top = 1395.0
margin_right = 3331.0
margin_bottom = 1805.0

[node name="tamer_9" parent="Game/Card Handler/Zones/Card View/Player1/TamerArea1" instance=ExtResource( 20 )]
margin_left = 3365.0
margin_top = 1395.0
margin_right = 3651.0
margin_bottom = 1805.0

[node name="tamer_10" parent="Game/Card Handler/Zones/Card View/Player1/TamerArea1" instance=ExtResource( 20 )]
margin_left = 3685.0
margin_top = 1395.0
margin_right = 3971.0
margin_bottom = 1805.0

[node name="Player2" type="Control" parent="Game/Card Handler/Zones/Card View"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Baby Deck2" parent="Game/Card Handler/Zones/Card View/Player2" instance=ExtResource( 20 )]
margin_left = 4185.0
margin_top = -325.0
margin_right = 4471.0
margin_bottom = 85.0001
texture = ExtResource( 1 )
flip_v = true

[node name="Security2" parent="Game/Card Handler/Zones/Card View/Player2" instance=ExtResource( 20 )]
margin_left = 4185.0
margin_top = 135.0
margin_right = 4471.0
margin_bottom = 545.0
texture = ExtResource( 1 )
flip_v = true

[node name="Breeding Area2" parent="Game/Card Handler/Zones/Card View/Player2" instance=ExtResource( 20 )]
margin_left = 3865.0
margin_top = -325.0
margin_right = 4151.0
margin_bottom = 85.0001
flip_v = true

[node name="Deck2" parent="Game/Card Handler/Zones/Card View/Player2" instance=ExtResource( 20 )]
margin_left = 5.0
margin_top = 55.0
margin_right = 291.0
margin_bottom = 465.0
texture = ExtResource( 1 )
flip_v = true

[node name="Trash2" parent="Game/Card Handler/Zones/Card View/Player2" instance=ExtResource( 20 )]
margin_left = 5.0
margin_top = -405.0
margin_right = 291.0
margin_bottom = 5.00009
texture = ExtResource( 1 )
flip_v = true

[node name="BattleArea2" type="Control" parent="Game/Card Handler/Zones/Card View/Player2"]
margin_right = 40.0
margin_bottom = 40.0

[node name="enemy_slot_1" parent="Game/Card Handler/Zones/Card View/Player2/BattleArea2" instance=ExtResource( 20 )]
margin_left = 485.0
margin_top = 395.0
margin_right = 771.0
margin_bottom = 805.0

[node name="enemy_slot_2" parent="Game/Card Handler/Zones/Card View/Player2/BattleArea2" instance=ExtResource( 20 )]
margin_left = 805.0
margin_top = 395.0
margin_right = 1091.0
margin_bottom = 805.0

[node name="enemy_slot_3" parent="Game/Card Handler/Zones/Card View/Player2/BattleArea2" instance=ExtResource( 20 )]
margin_left = 1125.0
margin_top = 395.0
margin_right = 1411.0
margin_bottom = 805.0

[node name="enemy_slot_4" parent="Game/Card Handler/Zones/Card View/Player2/BattleArea2" instance=ExtResource( 20 )]
margin_left = 1445.0
margin_top = 395.0
margin_right = 1731.0
margin_bottom = 805.0

[node name="enemy_slot_5" parent="Game/Card Handler/Zones/Card View/Player2/BattleArea2" instance=ExtResource( 20 )]
margin_left = 1765.0
margin_top = 395.0
margin_right = 2051.0
margin_bottom = 805.0

[node name="enemy_slot_6" parent="Game/Card Handler/Zones/Card View/Player2/BattleArea2" instance=ExtResource( 20 )]
margin_left = 2085.0
margin_top = 395.0
margin_right = 2371.0
margin_bottom = 805.0

[node name="enemy_slot_7" parent="Game/Card Handler/Zones/Card View/Player2/BattleArea2" instance=ExtResource( 20 )]
margin_left = 2405.0
margin_top = 395.0
margin_right = 2691.0
margin_bottom = 805.0

[node name="enemy_slot_8" parent="Game/Card Handler/Zones/Card View/Player2/BattleArea2" instance=ExtResource( 20 )]
margin_left = 2725.0
margin_top = 395.0
margin_right = 3011.0
margin_bottom = 805.0

[node name="enemy_slot_9" parent="Game/Card Handler/Zones/Card View/Player2/BattleArea2" instance=ExtResource( 20 )]
margin_left = 3045.0
margin_top = 395.0
margin_right = 3331.0
margin_bottom = 805.0

[node name="enemy_slot_10" parent="Game/Card Handler/Zones/Card View/Player2/BattleArea2" instance=ExtResource( 20 )]
margin_left = 3365.0
margin_top = 395.0
margin_right = 3651.0
margin_bottom = 805.0

[node name="TamerArea2" type="Control" parent="Game/Card Handler/Zones/Card View/Player2"]
margin_right = 40.0
margin_bottom = 40.0

[node name="enemy_tamer_1" parent="Game/Card Handler/Zones/Card View/Player2/TamerArea2" instance=ExtResource( 20 )]
margin_left = 485.0
margin_top = -85.0
margin_right = 771.0
margin_bottom = 325.0

[node name="enemy_tamer_2" parent="Game/Card Handler/Zones/Card View/Player2/TamerArea2" instance=ExtResource( 20 )]
margin_left = 805.0
margin_top = -85.0
margin_right = 1091.0
margin_bottom = 325.0

[node name="enemy_tamer_3" parent="Game/Card Handler/Zones/Card View/Player2/TamerArea2" instance=ExtResource( 20 )]
margin_left = 1125.0
margin_top = -85.0
margin_right = 1411.0
margin_bottom = 325.0

[node name="enemy_tamer_4" parent="Game/Card Handler/Zones/Card View/Player2/TamerArea2" instance=ExtResource( 20 )]
margin_left = 1445.0
margin_top = -85.0
margin_right = 1731.0
margin_bottom = 325.0

[node name="enemy_tamer_5" parent="Game/Card Handler/Zones/Card View/Player2/TamerArea2" instance=ExtResource( 20 )]
margin_left = 1765.0
margin_top = -85.0
margin_right = 2051.0
margin_bottom = 325.0

[node name="enemy_tamer_6" parent="Game/Card Handler/Zones/Card View/Player2/TamerArea2" instance=ExtResource( 20 )]
margin_left = 2085.0
margin_top = -85.0
margin_right = 2371.0
margin_bottom = 325.0

[node name="enemy_tamer_7" parent="Game/Card Handler/Zones/Card View/Player2/TamerArea2" instance=ExtResource( 20 )]
margin_left = 2405.0
margin_top = -85.0
margin_right = 2691.0
margin_bottom = 325.0

[node name="enemy_tamer_8" parent="Game/Card Handler/Zones/Card View/Player2/TamerArea2" instance=ExtResource( 20 )]
margin_left = 2725.0
margin_top = -85.0
margin_right = 3011.0
margin_bottom = 325.0

[node name="enemy_tamer_9" parent="Game/Card Handler/Zones/Card View/Player2/TamerArea2" instance=ExtResource( 20 )]
margin_left = 3045.0
margin_top = -85.0
margin_right = 3331.0
margin_bottom = 325.0

[node name="enemy_tamer_10" parent="Game/Card Handler/Zones/Card View/Player2/TamerArea2" instance=ExtResource( 20 )]
margin_left = 3365.0
margin_top = -85.0
margin_right = 3651.0
margin_bottom = 325.0

[node name="Pile" type="Control" parent="Game/Card Handler/Zones/Card View"]
margin_right = 40.0
margin_bottom = 40.0
mouse_default_cursor_shape = 2

[node name="UILayer" type="CanvasLayer" parent="."]
script = ExtResource( 16 )

[node name="Screens" type="Control" parent="UILayer"]
visible = false
margin_right = 1913.0
margin_bottom = 1080.0

[node name="MainMenu" parent="UILayer/Screens" instance=ExtResource( 12 )]

[node name="ConnectionScreen" parent="UILayer/Screens" instance=ExtResource( 13 )]
visible = false

[node name="MatchScreen" parent="UILayer/Screens" instance=ExtResource( 14 )]
visible = false

[node name="ReadyScreen" parent="UILayer/Screens" instance=ExtResource( 11 )]
visible = false

[node name="DeckImporter" parent="UILayer/Screens" instance=ExtResource( 19 )]
visible = false

[node name="Overlay" type="Control" parent="UILayer"]
visible = false
margin_right = 1917.0
margin_bottom = 1079.0
mouse_filter = 2

[node name="Message" type="Label" parent="UILayer/Overlay"]
visible = false
margin_left = 510.0
margin_top = 108.0
margin_right = 1388.0
margin_bottom = 186.0
custom_fonts/font = ExtResource( 17 )
text = "Waiting for players..."
align = 1

[node name="BackButton" type="Button" parent="UILayer/Overlay"]
margin_left = 1846.0
margin_top = 11.0
margin_right = 1909.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 1 )
text = "<-"

[connection signal="first_player" from="Game" to="Game/Phase Manager" method="_on_Game_first_player"]
[connection signal="new_match" from="Game" to="Game/Phase Manager" method="_on_Game_new_match"]
[connection signal="new_match" from="Game" to="Game/Card Handler/Zones/Deck Loader" method="_on_Game_new_match"]
[connection signal="new_match" from="Game" to="UILayer" method="_on_Game_new_match"]
[connection signal="phase_change" from="Game/Phase Manager" to="Game/Card Handler" method="_on_Phase_Manager_phase_change"]
[connection signal="pressed" from="Game/Phase Manager/Game UI/UI Elements/End Turn" to="Game/Phase Manager" method="_on_End_Turn_pressed"]
[connection signal="hatched_egg" from="Game/Card Handler" to="Game/Phase Manager" method="_on_Card_Handler_hatched_egg"]
[connection signal="unsuspended_cards" from="Game/Card Handler" to="Game/Phase Manager" method="_on_Card_Handler_unsuspended_cards"]
[connection signal="deck_loaded" from="Game/Card Handler/Zones/Deck Loader" to="Game/Card Handler/Zones/Card View" method="_on_Deck_Loader_deck_loaded"]
[connection signal="draw_complete" from="Game/Card Handler/Zones/Card View" to="Game/Phase Manager" method="_on_Card_View_draw_complete"]
[connection signal="setup_done" from="Game/Card Handler/Zones/Card View" to="Game/Phase Manager" method="_on_Card_View_setup_done"]
[connection signal="back_button" from="UILayer" to="." method="_on_UILayer_back_button"]
[connection signal="change_screen" from="UILayer" to="." method="_on_UILayer_change_screen"]
[connection signal="play_online" from="UILayer/Screens/MainMenu" to="." method="_on_Main_Menu_play_online"]
[connection signal="save_load" from="UILayer/Screens/MainMenu" to="." method="_on_MainMenu_save_load"]
[connection signal="ready_pressed" from="UILayer/Screens/ReadyScreen" to="." method="_on_ReadyScreen_ready_pressed"]
[connection signal="pressed" from="UILayer/Overlay/BackButton" to="UILayer" method="_on_BackButton_pressed"]
